add flat/sharp switch. Add bass note transpose logic

--- a/templates/song_detail.html
+++ b/templates/song_detail.html
@@ -37,6 +37,10 @@
             <button type="button" class="btn btn-outline-success btn-sm" onclick="transposeChords('-')">Transpose -1</button>
             <div id="transposition-count">0</div>
             <button type="button" class="btn btn-outline-success btn-sm" onclick="transposeChords('+')">Transpose +1</button>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="chordNotationSwitch">
+                <label class="form-check-label" for="chordNotationSwitch"> &#x266D or #</label>
+              </div>
 
             <button type="button" class="btn btn-outline-info btn-sm" onclick="changeFontSize(-1)">Decrease Font Size</button>
             <button type="button" class="btn btn-outline-info btn-sm" onclick="changeFontSize(1)">Increase Font Size</button>
