--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,21 +1,35 @@
-<nav class="navbar navbar-expand-lg fixed-top bg-dark" data-bs-theme="dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">
-        <img src="/static/music-player.png" alt="Logo" width="24" height="24" class="d-inline-block align-text-top">
-        Songbook</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+<nav class="navbar navbar-dark bg-dark fixed-top">
+  <div class="container-md">
+    <a class="navbar-brand" href="/">Home</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Songbook</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/add">Add new song</a>
+            <a class="nav-link" href="/add">Add song</a>
           </li>
-
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              All songs
+            </a>
+            <ul class="dropdown-menu dropdown-menu-dark">
+              {% for song in songs %}
+              <li><a class="dropdown-item" href="{{ url_for('song_detail', song_id=song.id) }}">{{ song.title }}</a></li>
+              {% endfor %}
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
